[package]
name = "trutheye-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
#rocket = { git = "https://github.com/SergioBenitez/Rocket" }
#rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
futures = "0.3"
hyper = "0.11"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
#async-std = { version = "1", features = ["attributes", "tokio1"] }

substrate-api-client = { git = "https://github.com/scs/substrate-api-client.git" }
codec = { package = "parity-scale-codec", features = ["derive"], version = "2.0.0" }

sp-core = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-keyring = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }

warp = "0.3"
hex = "0.4.3"